# xr-360-camera-streamer

./: LLM_NOTES.md
.tours/: debugging.tour
python/: pyproject.toml
python/examples/: 360_server_reprojection.html  360_server_reprojection.py  360_server_unity.py  basic_video_stream.html  basic_video_stream.py  ovr_skeleton_utils.py  webrtc_state_control.html  webrtc_state_control.py
python/src/xr_360_camera_streamer/: __about__.py  __init__.py  cli.py  logging.py
python/src/xr_360_camera_streamer/sources/: __init__.py  base.py  ffmpeg_source.py  opencv_source.py
python/src/xr_360_camera_streamer/streaming/: __init__.py  webrtc_server.py
python/src/xr_360_camera_streamer/transforms/: __init__.py  base.py  equilib_transforms.py
python/src/xr_360_camera_streamer/utils/: codecs.py
scratchpad/: check_av_codecs.py  webrtc_codec_negotiation.py
xr-360-streamer-assets/: .gitignore
